# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2025

# Changelog:
#
# Updated: 12 AUG 2025
# - Add packages to Apline: linux-headers, libtool, libltdl
#
# Updated: 11 JUN 2025
# - Add macOS 26 Tahoe to supported list
#
# Updated: 09 MAY 2025
# - Correction to Gentoo package requirements (thanks to Vladimir @vmisev)
#
# Updated: 29 FEB 2025
# - Add Pi 500 8GB code D04190 (thanks to Don Isenstadt)
    FIXME a fix for unbound variable on missing codes is needed
#
# Updated: 30 MAR 2025
# - Moved macOS, DYLD_* environment variables after extpkgs build
#   This works around a bug with Homebrew libpng
#
# Updated: 24 FEB 2025
# - Preliminary support for Raspberry Pi Desktop (x86)
#
# Updated: 17 FEB 2025
# - Add Pi CM5 4GB code C04180

# Updated: 09 FEB 2025
# - Add Pi 5B 4GB code C04170
#
# Updated: 31 JAN 2025
# - Add 'hercules --version' test after the build
#
# Updated: 24 JAN 2025
# - Fix bug in Android detection
#
# Updated: 16 JAN 2025
# - Add MAXRATES detection to control extra testing
# - Add entry for Raspberry Pi 5B 16GB (thanks to James Stephens)
# - Add --no-zshrc as synonym for --no-bashrc (thanks to Jordan31)
#
# Updated: 09 JAN 2025
# - Updated the README
#
# Updated: 01 JAN 2025
# - Add new --git-branch and --git-commit command line options
#
# Updated: 12 OCT 2024
# - Fix 'dnf list' command for Fedora
#
# Updated: 17 SEP 2024
# - Update config.{guess,sub} to latest from GNU
#
# Updated: 25 AUG 2024
# - Add --accept-root to allow running the script as root user
#
# Updated: 01 AUG 2024
# - Make various info and warnings around 'make check' more readable
# - Limit 'make -j' to 1 if memory size is less than 2000
#
# Updated: 11 JUL 2024
# - Make helper-build-regina.sh aware of Macports
#
# Updated: 09 JUL 2024
# - Add Android detection and allow the script to run (not yet supported)
#
# Updated: 11 JUN 2024
# - Added support for Apple macOS 15 Sequoia (Beta)
#
# Updated: 04 JUN 2024